force-app/main/default/objects/Opportunity/fields/Cross_Sell_Intel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Intel_Notes__c</fullName>
    <description>Fill in any cross-sell information you want to pass on about another service that might work well for this client. These will be passed on to the product owner after your opportunity is closed.</description>
    <inlineHelpText>Fill in any cross-sell information you want to pass on about another service that might work well for this client. These will be passed on to the product owner after your opportunity is closed.</inlineHelpText>
    <label>Cross-Sell Intel Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>