force-app/main/default/objects/Opportunity/fields/CrossSell_Intel_Product__c.field-meta.xml
<CustomField>
    <fullName>CrossSell_Intel_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the client mentions interest in, or you think they are a fit for, another product or service, use the lookup field to enter it here. This will trigger a notification to the product owner after your opportunity closes for them to reach out and start that sales process to keep you from stepping on each other&apos;s toes!</description>
    <inlineHelpText>If the client mentions interest in, or you think they are a fit for, another product or service, use the lookup field to enter it here. This will trigger a notification to the product owner after your opportunity closes for them to reach out and start that sales process to keep you from stepping on each other&apos;s toes!</inlineHelpText>
    <label>Cross-Sell Intel Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>