force-app/main/default/objects/Opportunity/fields/Ms_Dyn_Opportunity_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Ms_Dyn_Opportunity_Contact_ID__c</fullName>
    <label>Ms Dyn Opportunity Contact ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>