force-app/main/default/objects/Opportunity/fields/MS_Dyn_Opportunity_Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Opportunity_Created_DateTime__c</fullName>
    <label>MS Dyn Opportunity Created DateTime</label>
    <type>DateTime</type>
</CustomField>