force-app/main/default/objects/Opportunity/fields/MS_Dyn_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Opportunity_ID__c</fullName>
    <description>MS dynamics ID for opportunity</description>
    <label>MS Dyn Opportunity ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>