force-app/main/default/objects/Opportunity/fields/MS_Dyn_Opportunity_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Opportunity_Owner_ID__c</fullName>
    <label>MS Dyn Opportunity Owner ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>