force-app/main/default/objects/Opportunity/fields/MS_Dyn_SubService_Line__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_SubService_Line__c</fullName>
    <label>MS Dyn SubService Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>