force-app/main/default/objects/Opportunity/fields/Opportunity_Originator__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the RICHEY MAY EMPLOYEE who originated the opportunity - aka the first person to talk to them. This is likely to be the same as lead owner, but doesn&apos;t have to be!</description>
    <inlineHelpText>This is the RICHEY MAY EMPLOYEE who originated the opportunity - aka the first person to talk to them. This is likely to be the same as lead owner, but doesn&apos;t have to be!</inlineHelpText>
    <label>Opportunity Originator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>0015e00000DSOybAAH</value>
        </filterItems>
        <infoMessage>Search RM Employees</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Opportunity Originator)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>