force-app/main/default/objects/Opportunity/fields/Opportunity_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the primary person to communicate with throughout the opportunity. This does not have to be dictated by their specific title or role. This should be the champion within the potential client who is pushing for our services.</description>
    <inlineHelpText>This is the primary person to communicate with throughout the opportunity. This does not have to be dictated by their specific title or role. This should be the champion within the potential client who is pushing for our services.</inlineHelpText>
    <label>Opportunity Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Opportunity Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>