force-app/main/default/objects/Opportunity/fields/Opportunity_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a contact (i.e. NOT and RM employee) who referred this opportunity. This is used for relationship tracking reporting and is optional. If this opportunity was referred by someone inside RM, use the Originator field.</description>
    <inlineHelpText>This is a contact (i.e. NOT and RM employee) who referred this opportunity. This is used for relationship tracking reporting and is optional. If this opportunity was referred by someone inside RM, use the Originator field.</inlineHelpText>
    <label>Opportunity Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>