force-app/main/default/objects/Opportunity/fields/Proposal_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Sent_Date__c</fullName>
    <description>Fill in the date you last sent a proposal.</description>
    <inlineHelpText>Fill in the date you last sent a proposal.</inlineHelpText>
    <label>Proposal Sent Date</label>
    <type>Date</type>
</CustomField>