force-app/main/default/objects/Opportunity/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>This is the broad audience category this opportunity fits into. Once you select this, tailored options for Subsegment will appear. You may only select one Segment.</description>
    <inlineHelpText>This is the broad audience category this opportunity fits into. Once you select this, tailored options for Subsegment will appear. You may only select one Segment.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>