force-app/main/default/objects/Opportunity/fields/Stale_Reason__c.field-meta.xml
<CustomField>
    <fullName>Stale_Reason__c</fullName>
    <inlineHelpText>Choose a Stale reason and time period where you would like the lead to appear in your pipleline.</inlineHelpText>
    <label>Stale Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetName>Stale_Reason</valueSetName>
    </valueSet>
</CustomField>