force-app/main/default/objects/Opportunity/fields/SubSegment__c.field-meta.xml
<CustomField>
    <fullName>SubSegment__c</fullName>
    <description>This helps us narrow down the audience further. Select all that apply. This is used in reporting and marketing, so keep it accurate and updated.</description>
    <inlineHelpText>This helps us narrow down the audience further. Select all that apply. This is used in reporting and marketing, so keep it accurate and updated.</inlineHelpText>
    <label>SubSegment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SubSegment</valueSetName>
    </valueSet>
</CustomField>