force-app/main/default/objects/Opportunity/fields/Weighted_Value__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Value__c</fullName>
    <description>Estimated Value times Probability percentage</description>
    <formula>Amount  *  (Probability /100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Value times Probability percentage</inlineHelpText>
    <label>Weighted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>