force-app/main/default/objects/Opportunity/recordTypes/Alternative_Investments_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Alternative_Investments_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Alternative Investments Sales Process</businessProcess>
    <description>This uses the Alternative Investments sales process</description>
    <label>Alternative Investments Opportunity</label>
</RecordType>