force-app/main/default/objects/Opportunity/recordTypes/Product_Driven_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Product_Driven_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Product-Driven</businessProcess>
    <description>Product-Driven Opportunities have 2 optional slots for completing demos with the client.</description>
    <label>Product-Driven Opportunity</label>
</RecordType>