force-app/main/default/objects/Opportunity/recordTypes/Service_Driven_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Service_Driven_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Service-Driven</businessProcess>
    <description>Service-Driven Opportunities do not involve demos.</description>
    <label>Service-Driven Opportunity</label>
</RecordType>