force-app/main/default/objects/Opportunity/listViews/My_Opportunities_with_No_Account.listView-meta.xml
<ListView>
    <fullName>My_Opportunities_with_No_Account</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z</value>
    </filters>
    <label>My Opportunities with No Account</label>
</ListView>